<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.LoginFragment">

    <ImageView
        android:layout_marginTop="8dp"
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:id="@+id/quiz_image"
        android:src="@drawable/quiz_image"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <EditText
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:id="@+id/userIdTextInput"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:ems="10"
        android:inputType="number"
        android:hint="@string/enter_user_id"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:layout_marginTop="16dp"
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/sign_into_quiz_app"
        android:textSize="30sp"
        android:fontFamily="sans-serif"
        app:layout_constraintTop_toBottomOf="@id/quiz_image"
        app:layout_constraintBottom_toTopOf="@+id/userIdTextInput"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:id="@+id/signIn"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="1dp"
        android:text="@string/sign_in"
        android:textSize="20sp"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userIdTextInput" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:layout_marginEnd="16dp"
        android:src="@android:drawable/ic_input_add"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:layout_editor_absoluteX="332dp"
        tools:layout_editor_absoluteY="660dp"
        android:focusable="true"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/register" />
</androidx.constraintlayout.widget.ConstraintLayout>
